menambah tabel slr

--- a/bibtex/daftar-pustaka.bib
+++ b/bibtex/daftar-pustaka.bib
@@ -1,4 +1,4 @@
-@BOOK{book:js,
+@book{book:js,
   author    = {David Flanagan},
   title     = {JavaScript: The Definitive Guide},
   publisher = {O'Reilly Media},
@@ -7,7 +7,7 @@
   note      = {ISBN: 9781491952023}
 }
 
-@BOOK{book:angular,
+@book{book:angular,
   author    = {Pawel Kozlowski and Peter Bacon Darwin},
   title     = {Mastering Angular},
   publisher = {Packt Publishing},
@@ -15,7 +15,7 @@
   note      = {ISBN: 9781800567641}
 }
 
-@BOOK{book:nodejs,
+@book{book:nodejs,
   author    = {Shelley Powers},
   title     = {Learning Node.js Development},
   publisher = {O'Reilly Media},
@@ -23,7 +23,7 @@
   note      = {ISBN: 9781491943120}
 }
 
-@BOOK{book:scada,
+@book{book:scada,
   author    = {Stuart A. Boyer},
   title     = {SCADA: Supervisory Control and Data Acquisition},
   publisher = {ISA},
@@ -31,148 +31,162 @@
   note      = {ISBN: 9781936007097}
 }
 
-@ARTICLE{article:vendorlockin,
+@article{article:vendorlockin,
   author  = {Chesbrough, Henry},
   title   = {Open Innovation: The New Imperative for Creating and Profiting from Technology},
   journal = {Harvard Business Review Press},
   year    = {2003}
 }
 
-@MISC{site:fins,
-  author    = {{OMRON Corporation}},
-  title     = {FINS Communications Protocol Manual},
-  year      = {2019},
+@misc{site:fins,
+  author       = {{OMRON Corporation}},
+  title        = {FINS Communications Protocol Manual},
+  year         = {2019},
   howpublished = {\url{https://www.ia.omron.com/support/documents/fins.html}},
-  note      = {Accessed on 2025-07-17}
+  note         = {Accessed on 2025-07-17}
 }
 
 @online{fuxaGithub,
-  author       = {Frangoteam},
-  title        = {FUXA - Web-based SCADA/HMI software},
-  year         = 2024,
-  url          = {https://github.com/frangoteam/FUXA},
-  note         = {Diakses 17 Juli 2025}
+  author = {Frangoteam},
+  title  = {FUXA - Web-based SCADA/HMI software},
+  year   = 2024,
+  url    = {https://github.com/frangoteam/FUXA},
+  note   = {Diakses 17 Juli 2025}
 }
 
 @online{emqFINS,
-  author       = {EMQ Technologies Co., Ltd.},
-  title        = {Omron FINS Protocol: The Basics \& Its Benefits of Bridging to MQTT},
-  year         = 2024,
-  url          = {https://www.emqx.com/en/blog/omron-fins-protocol},
-  note         = {Diakses 17 Juli 2025}
+  author = {EMQ Technologies Co., Ltd.},
+  title  = {Omron FINS Protocol: The Basics \& Its Benefits of Bridging to MQTT},
+  year   = 2024,
+  url    = {https://www.emqx.com/en/blog/omron-fins-protocol},
+  note   = {Diakses 17 Juli 2025}
 }
 
 @article{almas2014open,
-  author = {Almas, M. S. and Vanfretti, L.},
-  title = {Open Source SCADA Implementation and PMU Integration},
+  author  = {Almas, M. S. and Vanfretti, L.},
+  title   = {Open Source SCADA Implementation and PMU Integration},
   journal = {IEEE PES General Meeting},
-  year = {2014}
+  year    = {2014}
 }
 
 @article{omidi2023node,
-  author = {Omidi, S. A. and others},
-  title = {Node-RED Based Open-Source SCADA for Hybrid Power System},
+  author  = {Omidi, S. A. and others},
+  title   = {Node-RED Based Open-Source SCADA for Hybrid Power System},
   journal = {Energies},
-  year = {2023}
+  year    = {2023}
 }
 
 @article{uddin2022open,
-  author = {Uddin, S. U. and others},
-  title = {Open-Source SCADA for Solar-Powered RO System},
+  author  = {Uddin, S. U. and others},
+  title   = {Open-Source SCADA for Solar-Powered RO System},
   journal = {Sensors},
-  year = {2022}
+  year    = {2022}
 }
 
 @inproceedings{rubiomedrano2023icsnet,
-  author = {Rubiomedrano, C.},
-  title = {ICSNet: A Hybrid-Interaction Honeynet for ICS},
+  author    = {Rubiomedrano, C.},
+  title     = {ICSNet: A Hybrid-Interaction Honeynet for ICS},
   booktitle = {CPSIoTSec'24},
-  year = {2023}
+  year      = {2023}
 }
 
+@inproceedings{salazar2024icsnet,
+  author    = {Luis Salazar and Efrén López-Morales and Juan Lozano and Carlos Rubio-Medrano and Álvaro A. Cárdenas},
+  title     = {{ICSNet: A Hybrid-Interaction Honeynet for Industrial Control Systems}},
+  booktitle = {Proceedings of the Sixth Workshop on CPS\&IoT Security and Privacy (CPSIoTSec'24)},
+  year      = {2024},
+  pages     = {1--12},
+  publisher = {ACM},
+  address   = {Salt Lake City, UT, USA},
+  doi       = {10.1145/3690134.3694813},
+  isbn      = {979-8-4007-1244-9},
+  url       = {https://doi.org/10.1145/3690134.3694813}
+}
+
+
 @misc{humaj2021fins,
-  author = {Humaj, P.},
-  title = {Communication – Omron FINS},
+  author       = {Humaj, P.},
+  title        = {Communication – Omron FINS},
   howpublished = {IPESOFT Blog},
-  year = {2021}
+  year         = {2021}
 }
 
 @misc{seeed2024fuxa,
   author = {Seeed Studio},
-  title = {What FUXA Provides},
-  year = {2024},
-  note = {Accessed July 2025}
+  title  = {What FUXA Provides},
+  year   = {2024},
+  note   = {Accessed July 2025}
 }
 
 @article{sastoque2023assessing,
-  author    = {Sastoque, Lina and Pérez, John},
-  title     = {Assessing Open-Source SCADA Systems in Industrial Environments},
-  journal   = {International Journal of Industrial Informatics},
-  year      = {2023},
-  volume    = {18},
-  number    = {2},
-  pages     = {123--135},
-  doi       = {10.1234/ijii.v18i2.5678}
+  author  = {Sastoque, Lina and Pérez, John},
+  title   = {Assessing Open-Source SCADA Systems in Industrial Environments},
+  journal = {International Journal of Industrial Informatics},
+  year    = {2023},
+  volume  = {18},
+  number  = {2},
+  pages   = {123--135},
+  doi     = {10.1234/ijii.v18i2.5678}
 }
 
 
 @misc{emqx2023fins,
   author = {EMQX},
-  title = {Omron FINS Protocol Overview},
-  year = {2023},
-  note = {Accessed July 2025}
+  title  = {Omron FINS Protocol Overview},
+  year   = {2023},
+  note   = {Accessed July 2025}
 }
 
 @article{hazdi2017scada,
-  author = {Robby Hazdi and Muhammad Fadli and Yusril Maulana},
-  title = {Perancangan SCADA pada Sistem Otomatisasi Rumah},
+  author  = {Robby Hazdi and Muhammad Fadli and Yusril Maulana},
+  title   = {Perancangan SCADA pada Sistem Otomatisasi Rumah},
   journal = {eProceedings of Applied Science},
-  volume = {3},
-  number = {2},
-  year = {2017},
-  pages = {1099--1106},
-  url = {https://openlibrarypublications.telkomuniversity.ac.id/index.php/appliedscience/article/view/4046},
-  note = {Universitas Telkom}
+  volume  = {3},
+  number  = {2},
+  year    = {2017},
+  pages   = {1099--1106},
+  url     = {https://openlibrarypublications.telkomuniversity.ac.id/index.php/appliedscience/article/view/4046},
+  note    = {Universitas Telkom}
 }
 
 @online{banthia2024vendorlockin,
-  author    = {Bakul Banthia},
-  title     = {Understanding the Risks of Cloud Vendor Lock-In},
-  year      = {2024},
-  date      = {2024-08-13},
-  url       = {https://drj.com/industry_news/understanding-the-risks-of-cloud-vendor-lock-in/},
-  note      = {Disaster Recovery Journal},
+  author       = {Bakul Banthia},
+  title        = {Understanding the Risks of Cloud Vendor Lock-In},
+  year         = {2024},
+  date         = {2024-08-13},
+  url          = {https://drj.com/industry_news/understanding-the-risks-of-cloud-vendor-lock-in/},
+  note         = {Disaster Recovery Journal},
   organization = {Tessell}
 }
 
 @online{electron2024why,
-  title = {Why Electron},
-  author = {{Electron Team}},
-  year = {2024},
-  url = {https://www.electronjs.org/docs/latest/why-electron},
-  note = {Accessed: 2025-07-18},
+  title        = {Why Electron},
+  author       = {{Electron Team}},
+  year         = {2024},
+  url          = {https://www.electronjs.org/docs/latest/why-electron},
+  note         = {Accessed: 2025-07-18},
   organization = {ElectronJS}
 }
 
 @article{llopis2020industry,
-  author    = {Llopis-Albert, Carlos and Rubio, Francisco and Valero, Fernando},
-  title     = {Impact of digital transformation on the automotive industry},
-  journal   = {Technological Forecasting and Social Change},
-  volume    = {162},
-  year      = {2020},
-  pages     = {120343},
-  doi       = {10.1016/j.techfore.2020.120343}
+  author  = {Llopis-Albert, Carlos and Rubio, Francisco and Valero, Fernando},
+  title   = {Impact of digital transformation on the automotive industry},
+  journal = {Technological Forecasting and Social Change},
+  volume  = {162},
+  year    = {2020},
+  pages   = {120343},
+  doi     = {10.1016/j.techfore.2020.120343}
 }
 
 @article{rubio2019disruptive,
-  author    = {Rubio, Francisco and Valero, Fernando and Llopis-Albert, Carlos},
-  title     = {Disruptive effects of electric vehicles on automotive supply chain},
-  journal   = {Case Studies on Transport Policy},
-  volume    = {7},
-  number    = {2},
-  year      = {2019},
-  pages     = {218--229},
-  doi       = {10.1016/j.cstp.2019.01.006}
+  author  = {Rubio, Francisco and Valero, Fernando and Llopis-Albert, Carlos},
+  title   = {Disruptive effects of electric vehicles on automotive supply chain},
+  journal = {Case Studies on Transport Policy},
+  volume  = {7},
+  number  = {2},
+  year    = {2019},
+  pages   = {218--229},
+  doi     = {10.1016/j.cstp.2019.01.006}
 }
 
 @article{emmanni2025typescript,
@@ -182,7 +196,7 @@
   volume  = {11},
   number  = {1},
   year    = {2025},
-  url = {https://www.researchgate.net/publication/380361058_The_Role_of_TypeScript_in_Enhancing_Development_with_Modern_JavaScript_Frameworks},
+  url     = {https://www.researchgate.net/publication/380361058_The_Role_of_TypeScript_in_Enhancing_Development_with_Modern_JavaScript_Frameworks}
 }
 
 @article{abbas2015efficient,
@@ -193,13 +207,13 @@
 }
 
 @article{ancona2018nodejs,
-  author       = {Ancona, Davide and Franceschini, Luca and Delzanno, Giorgio and Leotta, Maurizio and Ribaudo, Marina and Ricca, Filippo},
-  title        = {Towards Runtime Monitoring of Node.js and Its Application to the Internet of Things},
-  journal      = {arXiv preprint arXiv:1802.01790},
-  year         = {2018},
-  url          = {https://arxiv.org/abs/1802.01790},
-  doi          = {10.48550/arXiv.1802.01790},
-  journal_ref  = {EPTCS 264, 2018, pp.\ 27--42}
+  author      = {Ancona, Davide and Franceschini, Luca and Delzanno, Giorgio and Leotta, Maurizio and Ribaudo, Marina and Ricca, Filippo},
+  title       = {Towards Runtime Monitoring of Node.js and Its Application to the Internet of Things},
+  journal     = {arXiv preprint arXiv:1802.01790},
+  year        = {2018},
+  url         = {https://arxiv.org/abs/1802.01790},
+  doi         = {10.48550/arXiv.1802.01790},
+  journal_ref = {EPTCS 264, 2018, pp.\ 27--42}
 }
 
 @article{jointjs2023scada,
@@ -241,7 +255,7 @@
   title   = {TypeScript's Evolution: An Analysis of Feature Adoption Over Time},
   journal = {arXiv preprint arXiv:2303.09802},
   year    = {2023},
-  url =  {https://arxiv.org/abs/2303.09802},
+  url     = {https://arxiv.org/abs/2303.09802}
 }
 
 @article{omidi2023node_red_scada,
