--- a/seminar-proposal.tex
+++ b/seminar-proposal.tex
@@ -2,6 +2,13 @@
 
 \usepackage{blindtext}
 
+\usepackage{longtable}
+\usepackage{array}
+\usepackage{geometry} % opsional, untuk pengaturan margin
+\usepackage{pdflscape}
+
+\geometry{margin=1in}
+
 %===========================================================
 % Definisi Data Peneliti, Judul, Pembimbing dan Penguji
 %-----------------------------------------------------------
