mengoreksi tabel slr

--- a/bibtex/daftar-pustaka.bib
+++ b/bibtex/daftar-pustaka.bib
@@ -69,18 +69,31 @@
   year    = {2014}
 }
 
+
 @article{omidi2023node,
-  author  = {Omidi, S. A. and others},
-  title   = {Node-RED Based Open-Source SCADA for Hybrid Power System},
-  journal = {Energies},
-  year    = {2023}
+  author    = {Mohammad Omidi and Majid Salehifar and Amir Mohammadi},
+  title     = {Design and Implementation of an Open Source SCADA System for Monitoring a Hybrid Renewable Power System},
+  journal   = {Energies},
+  volume    = {16},
+  number    = {5},
+  pages     = {2229},
+  year      = {2023},
+  publisher = {MDPI},
+  doi       = {10.3390/en16052229},
+  url       = {https://www.mdpi.com/1996-1073/16/5/2229}
 }
 
 @article{uddin2022open,
-  author  = {Uddin, S. U. and others},
-  title   = {Open-Source SCADA for Solar-Powered RO System},
-  journal = {Sensors},
-  year    = {2022}
+  author    = {Sheikh Usman Uddin and Mirza Jabbar Aziz Baig and Mohammad Tariq Iqbal},
+  title     = {Design and Implementation of an Open-Source SCADA System for a Community Solar-Powered Reverse Osmosis System},
+  journal   = {Sensors},
+  volume    = {22},
+  number    = {24},
+  pages     = {9631},
+  year      = {2022},
+  publisher = {MDPI},
+  doi       = {10.3390/s22249631},
+  url       = {https://www.mdpi.com/1424-8220/22/24/9631}
 }
 
 @inproceedings{rubiomedrano2023icsnet,
