add gambar bab 3

--- a/bibtex/daftar-pustaka.bib
+++ b/bibtex/daftar-pustaka.bib
@@ -125,10 +125,12 @@
 }
 
 @misc{seeed2024fuxa,
-  author = {Seeed Studio},
-  title  = {What FUXA Provides},
-  year   = {2024},
-  note   = {Accessed July 2025}
+  author       = {Kasun Thushara},
+  title        = {Getting Start with FUXA - Web Based SCADA Tool},
+  year         = {2024},
+  url          = {https://wiki.seeedstudio.com/reTerminal-DM_intro_FUXA/},
+  note         = {Accessed: 2025-07-16},
+  publisher    = {Seeed Studio Wiki}
 }
 
 @article{sastoque2023assessing,
