--- a/include/bab1.tex
+++ b/include/bab1.tex
@@ -10,7 +10,7 @@ Di lapangan, penerapan strategi digitalisasi di PT~XYZ didorong oleh temuan bahw
 
 Namun, penggunaan sistem SCADA komersial yang tertutup berpotensi menimbulkan ketergantungan pada vendor tertentu (\textit{vendor lock-in}). Ketergantungan ini dapat menimbulkan risiko biaya tambahan ketika perangkat keras yang digunakan mengalami disfungsi, dihentikan produksinya (discontinue), atau tidak lagi didukung secara penuh oleh vendor. Perusahaan perlu mengeluarkan biaya besar untuk penggantian modul PLC, upgrade lisensi SCADA, atau penyesuaian perangkat baru yang kompatibel \parencite{banthia2024vendorlockin}. Risiko ini semakin nyata pada sistem tertutup yang tidak menyediakan fleksibilitas integrasi dengan teknologi masa depan.
 
-Oleh karena itu, pengembangan sistem SCADA berbasis web sumber terbuka seperti FUXA menjadi solusi strategis. Dengan menggunakan platform open source seperti FUXA, perusahaan dapat membangun visualisasi proses produksi modern dan mengendalikan mesin-mesin produksi secara \textit{real-time} melalui antarmuka web yang fleksibel, tanpa terkendala biaya lisensi tinggi maupun batasan teknologi dari vendor tertentu. Pendekatan ini diharapkan mendukung upaya monitoring dan pengendalian produksi PT~XYZ dalam rangka efisiensi dan adaptasi teknologi secara menyeluruh.
+Oleh karena itu, pengembangan sistem SCADA berbasis web sumber terbuka seperti FUXA menjadi solusi strategis. Dengan menggunakan platform open source seperti FUXA, perusahaan dapat membangun visualisasi proses produksi modern dan mengendalikan mesin-mesin produksi secara waktu nyata melalui antarmuka web yang fleksibel, tanpa terkendala biaya lisensi tinggi maupun batasan teknologi dari vendor tertentu. Pendekatan ini diharapkan mendukung upaya monitoring dan pengendalian produksi PT~XYZ dalam rangka efisiensi dan adaptasi teknologi secara menyeluruh.
 
 
 \section{Rumusan Masalah}
