--- a/include/bab3.tex
+++ b/include/bab3.tex
@@ -17,37 +17,37 @@ Metode yang digunakan dalam pengembangan perangkat lunak ini adalah metode itera
 \section{Alat dan Bahan}
 \begin{itemize}
     \item \textbf{Perangkat Keras:} Laptop/PC, jaringan LAN, PLC Omron (atau simulator).
-    \item \textbf{Perangkat Lunak:} 
-    \begin{itemize}
-        \item FUXA (https://github.com/frangoteam/FUXA)
-        \item Node.js, Angular CLI, Git
-        \item Wireshark untuk sniffing paket FINS
-        \item Visual Studio Code untuk pengembangan
-    \end{itemize}
-    \item \textbf{Library Tambahan:} 
-    \begin{itemize}
-        \item \texttt{node-omron-fins} atau modifikasi client FINS custom
-        \item Angular Material untuk UI komponen konfigurasi
-    \end{itemize}
+    \item \textbf{Perangkat Lunak:}
+          \begin{itemize}
+              \item FUXA (https://github.com/frangoteam/FUXA)
+              \item Node.js, Angular CLI, Git
+              \item Wireshark untuk sniffing paket FINS
+              \item Visual Studio Code untuk pengembangan
+          \end{itemize}
+    \item \textbf{Library Tambahan:}
+          \begin{itemize}
+              \item \texttt{node-omron-fins} atau modifikasi client FINS custom
+              \item Angular Material untuk UI komponen konfigurasi
+          \end{itemize}
 \end{itemize}
 
 \section{Tahapan Penelitian}
 Penelitian dilakukan dalam beberapa tahap berikut:
 
 \begin{table}[H]
-\centering
-\begin{tabular}{|c|p{8cm}|}
-\hline
-\textbf{No} & \textbf{Kegiatan} \\
-\hline
-1 & Studi literatur tentang protokol FINS, SCADA, dan arsitektur FUXA \\
-2 & Perancangan konektor dan struktur konfigurasi perangkat/tag \\
-3 & Implementasi modul konektor dan antarmuka pengguna \\
-4 & Pengujian komunikasi, pengamatan melalui Wireshark \\
-5 & Evaluasi dan dokumentasi hasil integrasi \\
-\hline
-\end{tabular}
-\caption{Tahapan Pelaksanaan Penelitian}
+    \centering
+    \begin{tabular}{|c|p{8cm}|}
+        \hline
+        \textbf{No} & \textbf{Kegiatan}                                                 \\
+        \hline
+        1           & Studi literatur tentang protokol FINS, SCADA, dan arsitektur FUXA \\
+        2           & Perancangan konektor dan struktur konfigurasi perangkat/tag       \\
+        3           & Implementasi modul konektor dan antarmuka pengguna                \\
+        4           & Pengujian komunikasi, pengamatan melalui Wireshark                \\
+        5           & Evaluasi dan dokumentasi hasil integrasi                          \\
+        \hline
+    \end{tabular}
+    \caption{Tahapan Pelaksanaan Penelitian}
 \end{table}
 
 \section{Platform dan Arsitektur Aplikasi}
@@ -55,26 +55,26 @@ Dalam pengembangan aplikasi SCADA berbasis web untuk desktop, penulis menggunaka
 
 Arsitektur ini memberikan keuntungan berupa:
 \begin{itemize}
-\item Kemudahan distribusi dan instalasi.
-\item Akses langsung terhadap sistem file dan perangkat lokal.
-\item Performa tinggi karena menggunakan versi terbaru Chromium dan V8 engine.
-\item Kemandirian penuh dari browser atau runtime eksternal.
+    \item Kemudahan distribusi dan instalasi.
+    \item Akses langsung terhadap sistem file dan perangkat lokal.
+    \item Performa tinggi karena menggunakan versi terbaru Chromium dan V8 engine.
+    \item Kemandirian penuh dari browser atau runtime eksternal.
 \end{itemize}
 
 Penggunaan Electron menjadikan aplikasi SCADA dapat digunakan di lingkungan industri yang membutuhkan portabilitas, kestabilan, serta kontrol penuh terhadap platform distribusi.
 
 \subsection{Topologi Sistem dan Komunikasi FINS}
 
-Topologi sistem yang direncanakan dalam penelitian ini digambarkan pada Gambar \ref{fig:topologi}. Diagram tersebut memvisualisasikan arsitektur konektivitas yang akan dikembangkan antara perangkat lunak SCADA sumber terbuka (FUXA) yang dijalankan pada Mini PC dengan delapan PLC Omron CJ2M yang merepresentasikan delapan pos kerja pada suatu lini produksi. Setiap PLC akan dihubungkan melalui jaringan lokal menggunakan protokol FINS berbasis UDP/TCP. Selain itu, sistem dirancang untuk menampilkan informasi performa produksi secara real-time melalui LCD TV yang terhubung langsung ke Mini PC sebagai media dashboard utama.
+Topologi sistem yang direncanakan dalam penelitian ini digambarkan pada Gambar \ref{fig:topologi}. Diagram tersebut memvisualisasikan arsitektur konektivitas yang akan dikembangkan antara perangkat lunak SCADA sumber terbuka (FUXA) yang dijalankan pada Mini PC dengan delapan PLC Omron CJ2M yang merepresentasikan delapan pos kerja pada suatu lini produksi. Setiap PLC akan dihubungkan melalui jaringan lokal menggunakan protokol FINS berbasis UDP/TCP. Selain itu, sistem dirancang untuk menampilkan informasi performa produksi secara waktu nyata melalui LCD TV yang terhubung langsung ke Mini PC sebagai media dashboard utama.
 
 \begin{figure}[H]
-\centering
-\includegraphics[width=\textwidth]{images/topologi_fuxa_fins.png} % Ganti dengan nama file SVG/PNG diagram hasil ekspor dari Mermaid
-\caption{Topologi Sistem SCADA FUXA dengan Protokol FINS}
-\label{fig:topologi}
+    \centering
+    \includegraphics[width=\textwidth]{images/topologi_fuxa_fins.png} % Ganti dengan nama file SVG/PNG diagram hasil ekspor dari Mermaid
+    \caption{Topologi Sistem SCADA FUXA dengan Protokol FINS}
+    \label{fig:topologi}
 \end{figure}
 
-Diagram ini juga menunjukkan bahwa Mini PC berperan sebagai pusat kendali yang mengatur komunikasi ke setiap titik kontrol (posisi 1 sampai 8) di jalur produksi. Setiap posisi memiliki kombinasi PLC CJ2M dan HMI yang menangani proses otomatisasi lokal. Informasi yang dikumpulkan dan dianalisis oleh FUXA dapat disajikan secara real-time melalui tampilan TV dashboard untuk kebutuhan pemantauan operator.
+Diagram ini juga menunjukkan bahwa Mini PC berperan sebagai pusat kendali yang mengatur komunikasi ke setiap titik kontrol (posisi 1 sampai 8) di jalur produksi. Setiap posisi memiliki kombinasi PLC CJ2M dan HMI yang menangani proses otomatisasi lokal. Informasi yang dikumpulkan dan dianalisis oleh FUXA dapat disajikan secara waktu nyata melalui tampilan TV dashboard untuk kebutuhan pemantauan operator.
 
 \section{Metode Pengujian}
 
@@ -86,7 +86,7 @@ Pengujian \textit{black-box} berfokus pada aspek fungsional sistem dari sudut pa
 
 \begin{itemize}
     \item \textbf{Pengujian Konfigurasi Perangkat:} Memastikan bahwa parameter seperti \texttt{DA1}, \texttt{SA1}, \texttt{Unit Address}, dan \texttt{protocol} dapat disimpan dan ditampilkan ulang dengan benar.
-    \item \textbf{Pengujian Pembacaan Data:} Mengamati apakah nilai dari PLC dapat ditampilkan di UI (user interface) FUXA secara real-time setelah polling.
+    \item \textbf{Pengujian Pembacaan Data:} Mengamati apakah nilai dari PLC dapat ditampilkan di UI (user interface) FUXA secara waktu nyata setelah polling.
     \item \textbf{Pengujian Penulisan Data:} Menguji kemampuan sistem dalam mengubah nilai tag pada PLC dari UI, dan memastikan nilai benar-benar tersimpan di memori PLC.
     \item \textbf{Pengujian Alarm:} Mengaktifkan kondisi pemicu alarm dan mengevaluasi apakah notifikasi muncul sesuai logika yang ditetapkan.
     \item \textbf{Pengujian DAQ:} Memverifikasi apakah data historis disimpan dengan benar dalam sistem logging dan dapat ditampilkan kembali.
